--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,84 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+}
+
+#main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 10%;
+    align-items: center;
+    background-color: rgb(80, 80, 80);
+    color: aliceblue;
+    height: 100vh;
+    width: 100%;
+    font-family: "Roboto", cursive;
+}
+
+@keyframes meaning-animation {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 .meaning {
     border: 1px solid black;
+    animation-name: meaning-animation;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
 }
+
+form {
+    display: grid;
+    grid-template-columns: 20fr 1fr;
+    width: 30vw;
+    min-width: 300px;
+}
+
+#input-value {
+    margin-right: 0px;
+    border: none;
+    height: 100%;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    background-color: aliceblue;
+    padding: 10px;
+    transition: 0.5s;
+}
+
+#input-value::placeholder {
+    font-family: "Roboto";
+}
+
+#input-value:hover, #input-value:hover + button {
+    outline: none;
+    box-shadow: 0px 0px 5px white;
+}
+
+#input-value:focus, #input-value:focus + button {
+    outline: none;
+    box-shadow: 0px 0px 10px white;
+}
+
+#search-button {
+    margin-left: 0px;
+    border: none;
+    height: 100%;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: aliceblue;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
