--- a/styles.css
+++ b/styles.css
@@ -32,11 +32,11 @@ body {
 }
 
 .meaning {
-    border: 1px solid black;
     animation-name: meaning-animation;
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
     animation-iteration-count: 1;
+    padding: 3%;
 }
 
 form {
@@ -77,8 +77,47 @@ form {
     height: 100%;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    background-color: aliceblue;
+    background-color: rgb(217, 224, 230);
     cursor: pointer;
     transition: 0.5s;
 }
 
+#feedback {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: flex-start;
+    overflow: auto;
+}
+
+.partOfSpeech {
+    font-style: italic;
+    font-size: 0.8em;
+    font-family: "Mooli";
+}
+
+.example {
+    color: rgb(135, 155, 172);
+    font-size: 0.9rem;
+    font-weight: normal;
+}
+
+.synonyms {
+    color: rgb(142, 119, 168);
+    font-size: 0.8rem;
+    font-weight: normal;
+}
+
+::-webkit-scrollbar {
+    border: none;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgb(106, 109, 112);
+    border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(197, 192, 192);
+    border-radius: 20px;
+}
